# OpenMindBlocks

./: .gitignore  .gitmodules  CMakeLists.txt  OpenMindBlocks.iss  README.md  compile_commands.json
.github/workflows/: linux-release.yml  windows-release.yml
launcher/: AppIcon.rc  CMakeLists.txt  LauncherMain.cpp
src/frontend/: AppIcon.rc  CMakeLists.txt  blockitem.cpp  blockitem.h  dragwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  programcanvas.cpp  programcanvas.h  puzzlewidget.cpp  puzzlewidget.h  resources.qrc
src/frontend/components/: CMakeLists.txt
src/frontend/components/drag_widget/: CMakeLists.txt  dragwidget.cpp  dragwidget.h
src/frontend/components/graphics/: CMakeLists.txt  colorcombo.h  colordelegate.h  colorswatchdelegate.h
src/frontend/components/http/: CMakeLists.txt  httprequest.cpp  httprequest.h
src/frontend/components/json_converter/: CMakeLists.txt  jsonconverter.cpp  jsonconverter.h
src/frontend/components/preview_blocks/: CMakeLists.txt  condblockendprev.cpp  condlblockendprev.h  ifcolorprev.cpp  ifcolorprev.h  movebwdprev.cpp  movebwdprev.h  movefwdprev.cpp  movefwdprev.h  prevblockfactory.cpp  prevblockfactory.h  startprogramprev.cpp  startprogramprev.h  stopprogramprev.cpp  stopprogramprev.h  turnleftprev.cpp  turnleftprev.h  turnrightprev.cpp  turnrightprev.h  whileblockprev.cpp  whileblockprev.h
src/frontend/components/preview_blocks/base/: previewblockbase.cpp  previewblockbase.h
src/frontend/components/programming_blocks/: CMakeLists.txt  blockitem.cpp  blockitem.h  condblockendblock.cpp  condblockendblock.h  endprogramblock.cpp  endprogramblock.h  ifcolorblock.cpp  ifcolorblock.h  movebackwardblock.cpp  movebackwardblock.h  moveforwardblock.cpp  moveforwardblock.h  startprogramblock.cpp  startprogramblock.h  stopprogramblock.cpp  stopprogramblock.h  turnleftblock.cpp  turnleftblock.h  turnrightblock.cpp  turnrightblock.h  whileblock.cpp  whileblock.h
src/frontend/components/programming_blocks/blockitem/: blockitem.cpp  blockitem.h
src/frontend/components/sound_player/: CMakeLists.txt  soundplayer.cpp  sounplayer.h
src/frontend/components/utils/: CMakeLists.txt  blockfactory.cpp  blockfactory.h  prims.cpp  prims.h
src/frontend/components/widgets/: CMakeLists.txt  clearprogramwidget.cpp  clearprogramwidget.h  ifcolorwidget.cpp  ifcolorwidget.h  runprogramwidget.cpp  runprogramwidget.h
src/runner/: .env.example  EV3DeploymentTool.py  app.py  app.spec  backend.spec  requirements.txt  template.txt
src/runner/engine/: compile_runtime.py  prims.py
src/ui/: CMakeLists.txt  main.cpp
